[需求] 构建整个框架，完成第一个使用SurfaceView的Fragment

--- a/app/src/main/res/layout/view_surface.xml
+++ b/app/src/main/res/layout/view_surface.xml
@@ -20,8 +20,8 @@
         android:id="@+id/item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:text="内容部分"
         android:textColor="#fff"
-        android:text="内容部分"/>
+        android:textSize="20sp" />
 
 </RelativeLayout>
