--- a/app/src/main/res/layout/view_surface.xml
+++ b/app/src/main/res/layout/view_surface.xml
@@ -20,8 +20,8 @@
         android:id="@+id/item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/surface_view"
         android:text="内容部分"
-        android:textColor="#fff"
         android:textSize="20sp" />
 
 </RelativeLayout>
