--- a/app/src/main/res/layout/view_surface.xml
+++ b/app/src/main/res/layout/view_surface.xml
@@ -11,6 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="220dp" />
 
+    <SeekBar
+        android:id="@+id/sb_video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <ImageView
         android:id="@+id/item_iv"
         android:layout_width="match_parent"
